# Raspberry-Pi-PIco

Blinky/: Blinky.c  CMakeLists.txt
Button_Controlled_LED/: Button_Controlled_LED.c  CMakeLists.txt
Button_Controlled_Servo_With_LED/: Button_Controlled_Servo_With_LED.c  CMakeLists.txt
Cloud_Data_Upload/: CMakeLists.txt  Cloud_Data_Upload.c
ExternalLED/: CMakeLists.txt  ExternalLED.c  readme.md
Merge_Project/: CMakeLists.txt  Merge_Project.c  lcd1602_i2c.c
PIR_Sensor/: CMakeLists.txt  PIR_Sensor.c  lcd1602_i2c.h
Temperature_LCD/: CMakeLists.txt  Temperature_LCD.c  lcd1602_i2c.c  lcd1602_i2c.h
Temperature_Sensor/: CMakeLists.txt  Temperature_Sensor.c
WiFi_Internet_Connectivity/: CMakeLists.txt  WiFi_Internet_Connectivity.c
